# binary-classifier-tl

./: .gitignore  CMakeLists.txt
data/: data.txt
include/: loader.h  model.h
src/: inference.cpp  loader.cpp  main.cpp
